# parking-back

./: .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  alpr.py  docker-compose.yml  pyproject.toml
app/: .env  .env.local  app.py  settings.py
app/adapters/card_master/: adapter.py  exception.py  schemas.py
app/adapters/file_storage/: adapter.py  schemas.py
app/adapters/mail/: adapter.py  exceptions.py  schemas.py
app/adapters/notifications/: adapter.py  exceptions.py  schemas.py
app/adapters/telegram/: adapter.py  exceptions.py  schemas.py
app/api/: __init__.py  deps.py
app/api/admin/: handlers.py  schemas.py
app/api/auth/: handlers.py  schemas.py
app/api/card/: handlers.py  schemas.py
app/api/errors/: api_error.py  code.py  handlers.py
app/api/models/: base.py
app/api/orders/: handlers.py  schemas.py
app/api/place/: handlers.py  schemas.py
app/api/promotions/: handlers.py  schemas.py
app/api/station/: handlers.py  schemas.py
app/api/token/: handlers.py  schemas.py
app/api/user/: handlers.py  schemas.py
app/cron_tasks/: collector_expired_sessions.py
app/dependencies/: web_app.py
app/domain/: admin.py  exception.py  outbox.py  place.py  promotions.py  reservation.py  session.py  stations.py  user.py
app/dto/: admin.py  card.py  common.py  events.py  file.py  outbox.py  promotions.py  session.py  user.py
app/infrastructure/: db.py  logging.py  metrics.py  redis.py  smtp.py
app/infrastructure/broker/: exceptions.py  producer.py  schemas.py
app/infrastructure/http_client/: base.py  enums.py  exceptions.py  factory.py
app/persistent/db_schemas/: __init__.py  admin.py  base.py  outbox.py  places.py  promotions.py  reservations.py  session.py  station.py  user.py
app/repositories/: admin.py  exception.py  outbox.py  places.py  promotion.py  reservations.py  uow.py  user.py
app/use_cases/admin/: auth.py  change_min_volume.py  create_promotion.py  (+5 more)
app/utils/: dt_utils.py  model.py
migrations/: changelog.xml  liquibase.properties
migrations/sql/: 20230222_0002_user_305e62.sql  20230527_0003_devices_c96dd3.sql  20240821_0004_remove_personal_column_bc0e5e.sql  20240918_0004_add_stations_table_3c50c5.sql  20240918_0005_add_card_table_b38fd6.sql  20240922_0006_add_promotions_table_94d9d5.sql  20240929_0007_add_columns_a7a5d1.sql  20241023_0008_card_qr_column_edit_b0a0ec.sql  20250313_0003_add_admin_table_7a89c7.sql  20250313_0009_add_admin_table_7a89c7.sql  20250313_0010_fcm_token_9ca6b8.sql  20250313_0011_promotion_photo_e7046c.sql  20250317_0012_birth_date_9eff07.sql  20250317_0013_orders_e68d8f.sql  20250329_0004_add_parcking_shema_959982.sql  20250329_0005_add_parcking_places_table_c1aaf4.sql  20250329_0006_add_parcking_reservations_table_9e0177.sql  20250330_0007_auto_add_admin_a50b43.sql
(+34 files in other folders)
