[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

# Auth
pyjwt = "^2.9.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
cryptography = "^43.0.0"

# Web
fastapi = {extras = ["all"], version = "^0.111.0"}
aiohttp = {extras = ["speedups"], version = "^3.8.4"}

# S3
aioboto3 = "11.1.0"
pillow = "^11.1.0"

# DB
asyncpg = "^0.27.0"
sqlalchemy = "^2.0.4"
aioredis = {extras = ["hiredis"], version = "^2.0.1"}
geoalchemy2 = "^0.15.2"

# Logging
loguru = "^0.6.0"

# Another
dependency-injector = "^4.41.0"
python-dotenv = "^0.21.1"
aiokafka = "^0.11.0"
phonenumbers = "^8.13.42"
pydantic-settings = "^2.4.0"
pydantic = "^2.7.0"
prometheus-client = "^0.20.0"
aiosmtplib = "^4.0.0"


[tool.poetry.group.dev.dependencies]
# Linters
mypy = "^1.0.1"
bandit = "^1.7.4"
pytest = "^7.4.3"
isort = "^5.12.0"
pytest-cov = "^4.1.0"
coverage = "^7.3.2"
diff-cover = "^8.0.1"
# Formatter
black = "^22.6.0"
safety = "^2.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 120
force_grid_wrap = 0
multi_line_output = 3
use_parentheses = true
include_trailing_comma = true
known_first_party = "svc"
default_section = "THIRDPARTY"
lines_after_imports = -1


[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
skip-string-normalization = true
exclude = '''
^/(
  (
     \.git
    | \.pytest_cache
    | \.run
    | logs
    | docs
    | tests/integration
  )/
)
'''


[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",
]


[tool.mypy]
plugins = ["pydantic.mypy"]
follow_imports = "silent"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_incomplete_defs = false
disallow_untyped_defs = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pytest.ini_options]
# addopts = "-s -v --cov svc --cov-report term --cov-report=html"
addopts = "-v"
testpaths = ["tests/test_unit"]
filterwarnings = [
    # functional
    "ignore:There is no current event loop:DeprecationWarning:tests.functional.conftest",

    # test_unit
    "ignore::DeprecationWarning:sqlalchemy_utils",
]
